// Copyright 2020 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.duchy;

option java_package = "org.wfanet.measurement.internal.duchy";
option java_multiple_files = true;

enum ComputationBlobDependency {
  // Not set intentionally.
  UNKNOWN = 0;

  // BLOB is used as an input to the computation stage.
  INPUT = 1;

  // BLOB is an output of the computation stage.
  OUTPUT = 2;

  // BLOB is an output to the computation stage, but was written
  // before the computation stage began.
  PASS_THROUGH = 3;
}
